# movie-reviews-distilbert-sentiment-analysis

./: .gitignore  README.md  pyproject.toml
src/sentiment_analysis/: predict.py  train.py
