[tool.poetry]
name = "movie-reviews-distilbert-sentiment-analysis"
version = "0.1.0"
description = ""
authors = ["Oscar Gullberg <o.gullberg@gmail.com>"]

[tool.poetry.dependencies]
tensorflow = { version = "^2.12.0", markers = "sys_platform != 'darwin'" }
tensorflow-macos = { version = "^2.12.0", markers = "sys_platform == 'darwin'" }
python = "~3.11"
tensorflow-metal = { version = "^0.8.0", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'" }
transformers = "^4.29.2"
scikit-learn = "^1.2.2"
pandas = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
